feat: CRUD Account Implementation